Fix button styling on safari browser

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -252,6 +252,12 @@ footer .fab {
     color: #3B424A;
 }
 
+.btn {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 /* ----------- Dashboard Profile ----------- */
 
 .dashboard-heading {
